# ai-whisperer

./: .dockerignore  .env.example  .gitignore  .vercelignore  AILeadReactivationAgent_PRD.md  ARCHITECTURE_BUILD_PLAN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: config.py  db.py  main.py  models.py
app/api/: admin.py  bookings.py  campaigns.py  health.py  internal.py  leads.py  simulate.py  webhooks.py
app/services/: calendar.py  conversation.py  inbound.py  lexicon.py  llm.py  outbound.py  phone.py  prompts.py  security.py  whatsapp.py
app/static/: admin.html
app/workers/: celery_app.py  tasks.py
docs/: PDPA_RUNBOOK.md  VERCEL_DEPLOY.md
scripts/: seed_demo.py
tests/: conftest.py  test_inbound_pipeline.py  test_llm_providers.py  test_m2_brain.py  test_m3_ingestion.py  test_m4_campaigns.py  test_m5_booking.py  test_m6_admin.py  test_m7_internal.py  test_signature.py  test_simulate.py  test_webhook_verify.py
